# to-do-AI

./: Dockerfile  Dockerfile.frontend  README.md  custom_config.py  docker-compose.yml
backend/: pyproject.toml  todos.db
backend/app/: main.py
backend/app/core/: config.py  deps.py
backend/app/db/: models.py  seed.py  session.py
backend/app/events/: pubsub.py
backend/app/graphql/: schema.py  types.py
backend/app/services/: llm.py  todo.py
frontend/: components.json  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/.next/: BUILD_ID  build-manifest.json  next-server.js.nft.json  prerender-manifest.js  prerender-manifest.json  required-server-files.json  trace
frontend/.next/cache/: .tsbuildinfo
frontend/.next/server/: middleware-build-manifest.js  server-reference-manifest.js  server-reference-manifest.json
frontend/.next/server/pages/: 404.html  500.html  _app.js  _app.js.nft.json  _document.js  _error.js  _error.js.nft.json  index.html  index.js.nft.json
frontend/.next/static/chunks/: 285-55f496ed3067c1f3.js  webpack-c5ef9403ed95d7d9.js
frontend/.next/static/css/: 2828ee513e2dc96d.css
frontend/.next/static/nAvcp1oBM_2-ziVgWl6UQ/: _buildManifest.js
frontend/src/components/: Layout.tsx  Spinner.tsx  TodoInput.tsx  TodoItem.tsx
frontend/src/components/ui/: button.tsx  checkbox.tsx  input.tsx  toaster.tsx
frontend/src/graphql/: mutations.ts  queries.ts  subscriptions.ts
frontend/src/lib/: apollo.ts  persistence.ts  utils.ts
frontend/src/pages/: _app.tsx  index.tsx
scripts/: init_db.py  start.sh
(+7 files in other folders)
